--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover"/>
+  <meta name="theme-color" content="#ffffff">
   <title>GPT в деле: мини-курс</title>
 
-  <!-- Facebook Pixel -->
+  <!-- Facebook Pixel (как было) -->
   <script>
     !function(f,b,e,v,n,t,s){
       if(f.fbq)return;n=f.fbq=function(){n.callMethod ?
@@ -32,13 +33,33 @@
       --mini-bd:#ffe58f;
       --panel:#f8f8f8;
       --danger:#c62828;
+      --txt:#222;
+      --muted:#666;
+      --bd:#eee;
+      --focus:#1a73e8;
+      --tap:44px;
     }
-    body{margin:0;padding:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;background:#f4f4f4;color:#222}
-    .container{max-width:720px;margin:40px auto;background:#fff;padding:24px 20px 30px;border-radius:16px;box-shadow:0 8px 24px rgba(0,0,0,0.08)}
-    h1{font-size:1.8rem;margin:0 0 .5em}
+    *{box-sizing:border-box}
+    html,body{height:100%}
+    body{
+      margin:0;
+      padding:env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
+      font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
+      background:#f4f4f4;color:var(--txt); -webkit-text-size-adjust:100%;
+    }
+    .container{
+      max-width:720px;margin:40px auto;background:#fff;
+      padding:24px 20px 30px;border-radius:16px;
+      box-shadow:0 8px 24px rgba(0,0,0,0.08)
+    }
+    h1{font-size:1.8rem;margin:0 0 .5em;line-height:1.15}
     .subtitle{font-size:1.05rem;color:#555;margin-bottom:.9em}
 
-    .mini-value{display:flex;align-items:center;gap:10px;background:var(--mini-bg);border:1px solid var(--mini-bd);border-radius:10px;padding:10px 12px;font-size:.98rem;margin:10px 0}
+    .mini-value{
+      display:flex;align-items:center;gap:10px;background:var(--mini-bg);
+      border:1px solid var(--mini-bd);border-radius:10px;
+      padding:10px 12px;font-size:.98rem;margin:10px 0
+    }
     .mini-value strong{font-weight:700}
 
     .cta{text-align:center}
@@ -47,25 +68,60 @@
       padding:14px 22px;border-radius:10px;font-size:1.02rem;
       display:inline-block;transition:background .2s,transform .05s,color .2s,border-color .2s,box-shadow .2s;
       box-shadow:0 6px 14px rgba(255,102,0,0.25);border:2px solid transparent;
+      min-height:var(--tap); line-height:calc(var(--tap) - 20px);
     }
     .cta .cta-btn:hover{background:var(--cta-hover)}
     .cta .cta-btn:active{transform:translateY(1px)}
+    .cta .cta-btn:focus-visible{outline:3px solid var(--focus);outline-offset:2px}
     .cta .cta-btn.outline{background:#fff;color:var(--cta);border-color:var(--cta);box-shadow:none}
     .cta .cta-btn.outline:hover{background:#fff}
 
-    .trust{margin-top:10px;display:flex;align-items:center;gap:12px;border:1px solid #eee;border-radius:12px;padding:10px 12px;background:#fff}
-    .trust .avatar{width:36px;height:36px;border-radius:50%;overflow:hidden;flex:0 0 36px;background:#f0f0f0;border:1px solid #e5e5e5;display:flex;align-items:center;justify-content:center}
+    .trust{
+      margin-top:10px;display:flex;align-items:center;gap:12px;
+      border:1px solid var(--bd);border-radius:12px;padding:10px 12px;background:#fff
+    }
+    .trust .avatar{
+      width:36px;height:36px;border-radius:50%;overflow:hidden;flex:0 0 36px;
+      background:#f0f0f0;border:1px solid #e5e5e5;display:flex;align-items:center;justify-content:center
+    }
     .trust .avatar img{width:100%;height:100%;object-fit:cover;display:block}
     .trust .avatar.fallback::after{content:'👤';font-size:18px;color:#888}
     .trust .who{font-size:.95rem;line-height:1.2}
     .trust .who small{color:#666;display:block;font-size:.9rem}
     .trust .secure{margin-left:auto;display:flex;align-items:center;gap:8px;font-size:.92rem;color:#2b6c2b;white-space:nowrap}
 
-    .video-wrapper{margin:16px 0 8px;text-align:center;position:relative}
-    video{width:100%;border-radius:12px}
-    #unmute-btn{position:absolute;bottom:20px;right:20px;z-index:10;background:rgba(0,0,0,0.7);color:#fff;border:none;border-radius:6px;padding:10px 14px;font-size:.9rem;cursor:pointer;display:none}
+    .video-wrapper{margin:16px 0 8px;position:relative}
+    video{
+      width:100%;border-radius:12px;background:#000;
+      /* для iOS inline-воспроизведения */
+    }
+    /* Крупная накладка Play при запрете автоплея */
+    .play-overlay{
+      position:absolute;inset:0;display:none;align-items:center;justify-content:center;
+      background:linear-gradient(to bottom, rgba(0,0,0,.15), rgba(0,0,0,.35));
+      border-radius:12px;
+    }
+    .play-overlay.show{display:flex}
+    .play-btn{
+      background:#fff;border:none;border-radius:999px;cursor:pointer;
+      width:72px;height:72px;display:flex;align-items:center;justify-content:center;
+      box-shadow:0 8px 24px rgba(0,0,0,.25);
+    }
+    .play-btn:focus-visible{outline:3px solid var(--focus)}
+    .play-btn svg{width:28px;height:28px;fill:var(--cta)}
 
-    .offer{margin-top:18px;background:var(--panel);border:1px solid #eee;border-radius:12px;padding:14px;display:flex;align-items:center;gap:14px;flex-wrap:wrap}
+    #unmute-btn{
+      position:absolute;bottom:16px;right:16px;z-index:10;
+      background:rgba(0,0,0,0.75);color:#fff;border:none;border-radius:8px;
+      padding:10px 12px;font-size:.9rem;cursor:pointer;display:none;
+      min-height:var(--tap)
+    }
+    #unmute-btn:focus-visible{outline:3px solid var(--focus)}
+
+    .offer{
+      margin-top:18px;background:var(--panel);border:1px solid var(--bd);
+      border-radius:12px;padding:14px;display:flex;align-items:center;gap:14px;flex-wrap:wrap
+    }
     .price{display:flex;align-items:baseline;gap:10px}
     .price-old{color:#777;text-decoration:line-through;font-size:1.05rem}
     .price-new{color:#222;font-weight:800;font-size:1.45rem}
@@ -76,16 +132,21 @@
     .offer-note{width:100%;font-size:.9rem;color:#444;display:none}
     .offer-note code{background:#fff;border:1px dashed #bbb;padding:2px 6px;border-radius:6px;font-size:.85rem}
 
-    .bonus{background:#fff;border:1px solid #eee;padding:16px;margin-top:1.2em;border-radius:12px}
+    .bonus{background:#fff;border:1px solid var(--bd);padding:16px;margin-top:1.2em;border-radius:12px}
     .bonus-title{font-weight:800;margin-bottom:.4em}
     .cta.secondary{margin-top:10px}
     .cta.tertiary{margin-top:10px}
+
     .promo-hint{display:none}
 
-    @media(max-width:560px){
+    @media (max-width:560px){
       .container{margin:16px auto;padding:18px 14px 22px}
       h1{font-size:1.45rem}
       .cta .cta-btn{width:100%}
+    }
+    @media (prefers-reduced-motion: reduce){
+      .play-overlay{transition:none}
+      .cta .cta-btn{transition:none}
     }
   </style>
 </head>
@@ -94,38 +155,58 @@
     <h1>GPT в деле: как запустить ИИ-ассистента и заработать на нём</h1>
     <div class="subtitle">Мини-курс для тех, кто хочет меньше рутинить, больше зарабатывать — и начать применять ИИ в своём бизнесе уже завтра.</div>
 
-    <div class="mini-value">💡 5 уроков, бонусы и чат поддержки → всё за вечер, всего <strong><span id="mini-price">8,90 €</span></strong></div>
+    <!-- Жёлтая мини-ценность -->
+    <div class="mini-value">💡 6 уроков, бонусы и чат поддержки → всё за вечер, всего <strong><span id="mini-price">8,90 €</span></strong></div>
 
+    <!-- Верхний CTA -->
     <div class="cta">
-      <a class="cta-btn js-cta" href="https://buy.stripe.com/14A3cubyk3H17C67Of6Na07" onclick="fbq('trackCustom','Checkout_ai5')">Забрать доступ за 8,90&nbsp;€</a>
+      <a class="cta-btn js-cta" aria-label="Забрать доступ за 8,90 евро"
+         href="https://buy.stripe.com/14A3cubyk3H17C67Of6Na07"
+         onclick="fbq('trackCustom','Checkout_ai5')">Забрать доступ за 8,90&nbsp;€</a>
     </div>
 
-    <div class="trust">
+    <!-- Блок доверия -->
+    <div class="trust" aria-label="Блок доверия">
       <div class="avatar">
-        <img src="thumb1.jpg" alt="Виталий Пузырёв" onerror="this.remove(); this.parentElement.classList.add('fallback');">
+        <img src="thumb1.jpg" alt="Виталий Пузырёв"
+             onerror="this.remove(); this.parentElement.classList.add('fallback');">
       </div>
       <div class="who">Автор курса — <strong>Виталий Пузырёв</strong><small>таргетолог и инструктор по GPT</small></div>
-      <div class="secure">💳 Оплата через Stripe</div>
+      <div class="secure" aria-label="Оплата защищена">💳 Оплата через Stripe</div>
     </div>
 
-    <div class="video-wrapper">
-      <video id="course-video" controls muted playsinline poster="Course%20cover%20pix.png">
+    <!-- Видео -->
+    <div class="video-wrapper" id="video-wrap">
+      <video id="course-video" playsinline webkit-playsinline muted preload="metadata"
+             poster="Course%20cover%20pix.png">
         <source src="AIcourseStart.mp4" type="video/mp4">
       </video>
-      <button id="unmute-btn" onclick="unmuteVideo()">🔊 Включить звук</button>
+      <div class="play-overlay" id="play-overlay" aria-hidden="true">
+        <button class="play-btn" id="play-btn" aria-label="Смотреть видео">
+          <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M8 5v14l11-7z"/></svg>
+        </button>
+      </div>
+      <button id="unmute-btn" aria-label="Включить звук">🔊 Включить звук</button>
     </div>
 
+    <!-- Дублирующий CTA под видео -->
     <div class="cta secondary">
-      <a class="cta-btn js-cta" href="https://buy.stripe.com/14A3cubyk3H17C67Of6Na07" onclick="fbq('trackCustom','Checkout_ai5')">Забрать доступ за 8,90&nbsp;€</a>
+      <a class="cta-btn js-cta" aria-label="Забрать доступ за 8,90 евро (повтор)"
+         href="https://buy.stripe.com/14A3cubyk3H17C67Of6Na07"
+         onclick="fbq('trackCustom','Checkout_ai5')">Забрать доступ за 8,90&nbsp;€</a>
     </div>
 
+    <!-- OFFER -->
     <div class="offer" id="offer" aria-live="polite">
       <div class="price">
         <span class="price-old" id="price-old">14,90 €</span>
         <span class="price-new" id="price-new">8,90 €</span>
         <span class="badge" id="badge">−40%</span>
       </div>
-      <div class="timer" id="timer">⏳ <span id="timeleft">48:00:00</span><small>до конца акции</small></div>
+      <div class="timer" id="timer">
+        ⏳ <span id="timeleft">48:00:00</span>
+        <small>до конца акции</small>
+      </div>
       <div class="offer-status" id="offer-status" style="display:none">⏰ Акция завершена</div>
       <div class="offer-note" id="offer-note">Есть <strong>промокоды</strong> — попробуйте <code>GPT20</code> на следующем шаге.</div>
     </div>
@@ -137,6 +218,7 @@
       <li>🧠 Метод внедрения GPT без технарщины</li>
     </ul>
 
+    <!-- Бонусы -->
     <div class="bonus">
       <div class="bonus-title">🎁 <strong>Бонусы</strong>:</div>
       <ul>
@@ -144,30 +226,134 @@
         <li>📥 PDF «5 воронок в законе»</li>
       </ul>
       <div class="cta tertiary">
-        <a class="cta-btn js-cta" href="https://buy.stripe.com/14A3cubyk3H17C67Of6Na07" onclick="fbq('trackCustom','Checkout_ai5')">Получить доступ</a>
+        <a class="cta-btn js-cta" aria-label="Получить доступ"
+           href="https://buy.stripe.com/14A3cubyk3H17C67Of6Na07"
+           onclick="fbq('trackCustom','Checkout_ai5')">Получить доступ</a>
       </div>
     </div>
 
-    <div class="promo-hint" id="promo-hint">Акция завершена 🎉 Но у нас есть дополнительные <strong>промокоды</strong> — попробуйте ввести <code>GPT-20</code> на следующем шаге.</div>
+    <div class="promo-hint" id="promo-hint">
+      Акция завершена 🎉 Но у нас есть дополнительные <strong>промокоды</strong> — попробуйте ввести <code>GPT-20</code> на следующем шаге.
+    </div>
   </div>
 
   <script>
+    // ViewContent 7s (как было)
     setTimeout(()=>{fbq('trackCustom','ViewContent_ai5_7s')},7000);
-    window.addEventListener('load',()=>{
-      const v=document.getElementById('course-video'),b=document.getElementById('unmute-btn');
-      setTimeout(()=>{if(b)b.style.display='block'},3000);
-      setTimeout(()=>{
-        if(v&&v.paused){v.play().catch(()=>{})}
-        if(v){v.addEventListener('volumechange',()=>{if(!v.muted&&b)b.style.display='none'})}
-      },6000);
-    });
-    function unmuteVideo(){const v=document.getElementById('course-video'),b=document.getElementById('unmute-btn');if(v){v.muted=false;v.play()}if(b)b.style.display='none'}
 
+    // -------------- Надёжный запуск видео на всех устройствах
+    (function(){
+      const video = document.getElementById('course-video');
+      const unmuteBtn = document.getElementById('unmute-btn');
+      const overlay = document.getElementById('play-overlay');
+      const playBtn = document.getElementById('play-btn');
+      const wrap = document.getElementById('video-wrap');
+
+      const prefersReduced = window.matchMedia && window.matchMedia('(prefers-reduced-motion: reduce)').matches;
+
+      function showOverlay(){
+        overlay.classList.add('show');
+        overlay.setAttribute('aria-hidden','false');
+        if(unmuteBtn) unmuteBtn.style.display='none';
+      }
+      function hideOverlay(){
+        overlay.classList.remove('show');
+        overlay.setAttribute('aria-hidden','true');
+      }
+      function removePoster(){
+        if (video.getAttribute('poster')) video.removeAttribute('poster');
+      }
+      function restorePoster(){
+        // Опционально можно вернуть постер при паузе
+        // video.setAttribute('poster','Course%20cover%20pix.png');
+      }
+
+      // Обработчики состояния
+      video.addEventListener('playing', ()=>{
+        // когда реально идёт воспроизведение — показываем кнопку «включить звук»
+        if (unmuteBtn && video.muted) unmuteBtn.style.display='block';
+        hideOverlay(); removePoster();
+      });
+      video.addEventListener('pause', ()=>{
+        // если пользователь поставил на паузу — прячем «unmute», можем показать overlay
+        if (unmuteBtn) unmuteBtn.style.display='none';
+        showOverlay(); restorePoster();
+      });
+      video.addEventListener('ended', ()=>{
+        if (unmuteBtn) unmuteBtn.style.display='none';
+        showOverlay();
+      });
+
+      // Большая кнопка Play (жест пользователя) — гарантированный старт
+      playBtn.addEventListener('click', async ()=>{
+        hideOverlay();
+        try{
+          await video.play();
+          // если был выключен звук — предлагаем включить
+          if(video.muted && unmuteBtn) unmuteBtn.style.display='block';
+        }catch(e){
+          showOverlay(); // всё ещё запрещено — оставляем накладку
+        }
+      });
+
+      // Кнопка «Включить звук»
+      window.unmuteVideo = function(){
+        video.muted = false;
+        video.play().catch(()=>{});
+        if(unmuteBtn) unmuteBtn.style.display='none';
+      }
+
+      // Автозапуск через 3 сек, но уважаем Reduce Motion
+      window.addEventListener('load', ()=>{
+        setTimeout(async ()=>{
+          if (prefersReduced){
+            // пользователь против авто анимаций — показываем overlay сразу
+            showOverlay();
+            return;
+          }
+          // Пытаемся автозапустить (iOS/Android/desktop): должно быть muted + playsinline
+          try{
+            await video.play();
+            // показать кнопку размьюта
+            if(unmuteBtn && video.muted) unmuteBtn.style.display='block';
+            hideOverlay(); removePoster();
+          }catch(e){
+            // авто не дался — показываем накладку Play
+            showOverlay();
+          }
+        }, 3000);
+      });
+
+      // Фикс на свайп/тап по самому видео — тоже даёт user gesture
+      video.addEventListener('click', async ()=>{
+        if (video.paused){
+          try{
+            await video.play();
+            if(unmuteBtn && video.muted) unmuteBtn.style.display='block';
+          }catch(e){ showOverlay(); }
+        }
+      }, {passive:true});
+    })();
+
+    // -------------- Таймер/цены/CTA (как договаривались)
     (function(){
       const KEY='ai5_offer_deadline_v1',HOURS=48;
-      let deadline=localStorage.getItem(KEY);
-      if(!deadline){deadline=(Date.now()+HOURS*3600*1000).toString();localStorage.setItem(KEY,deadline)}
-      deadline=parseInt(deadline,10);
+      let deadline;
+      try{
+        const saved = localStorage.getItem(KEY);
+        if(saved){ deadline = parseInt(saved,10); }
+        else{
+          deadline = Date.now()+HOURS*3600*1000;
+          localStorage.setItem(KEY,String(deadline));
+        }
+      }catch(e){
+        // Private mode / запрет localStorage — используем volatile-память
+        if(!window.__ai5_deadline){
+          window.__ai5_deadline = Date.now()+HOURS*3600*1000;
+        }
+        deadline = window.__ai5_deadline;
+      }
+
       const $timer=document.getElementById('timeleft'),
             $timerWrap=document.getElementById('timer'),
             $old=document.getElementById('price-old'),
@@ -178,8 +364,10 @@
             $status=document.getElementById('offer-status'),
             $note=document.getElementById('offer-note'),
             $mini=document.getElementById('mini-price');
+
       let expiredSent=false;
       function pad(n){return n<10?'0'+n:n}
+
       function setPreSale(){
         if($old){$old.textContent='14,90 €';$old.style.display='inline'}
         if($new)$new.textContent='8,90 €'
@@ -188,7 +376,12 @@
         if($status)$status.style.display='none'
         if($note)$note.style.display='none'
         if($mini)$mini.textContent='8,90 €'
-        $ctas.forEach(a=>{a.href='https://buy.stripe.com/14A3cubyk3H17C67Of6Na07';a.textContent=a.classList.contains('tertiary')?'Получить доступ':'Забрать доступ за 8,90 €';a.classList.remove('outline')})
+        $ctas.forEach(a=>{
+          a.href='https://buy.stripe.com/14A3cubyk3H17C67Of6Na07';
+          a.textContent = a.classList.contains('tertiary') ? 'Получить доступ' : 'Забрать доступ за 8,90 €';
+          a.classList.remove('outline');
+          a.setAttribute('aria-label', a.textContent);
+        });
       }
       function setExpired(){
         if(!expiredSent){fbq('trackCustom','Offer_Expired_ai5');expiredSent=true}
@@ -199,17 +392,25 @@
         if($new)$new.textContent='14,90 €'
         if($badge)$badge.style.display='none'
         if($mini)$mini.textContent='14,90 €'
-        $ctas.forEach(a=>{a.href='https://buy.stripe.com/bJe8wO0TG4L57C67Of6Na08';a.textContent=a.classList.contains('tertiary')?'Получить доступ':'Получить доступ за 14,90 €';a.classList.add('outline')})
+        $ctas.forEach(a=>{
+          a.href='https://buy.stripe.com/bJe8wO0TG4L57C67Of6Na08';
+          a.textContent = a.classList.contains('tertiary') ? 'Получить доступ' : 'Получить доступ за 14,90 €';
+          a.classList.add('outline');
+          a.setAttribute('aria-label', a.textContent);
+        });
         if($hint)$hint.style.display='none'
       }
       function render(){
-        const diff=deadline-Date.now();
-        if(diff<=0){setExpired();return}
+        const diff = deadline - Date.now();
+        if(diff<=0){ setExpired(); return; }
         setPreSale();
-        const s=Math.floor(diff/1000),hh=pad(Math.floor(s/3600)),mm=pad(Math.floor((s%3600)/60)),ss=pad(s%60);
+        const s=Math.floor(diff/1000),
+              hh=pad(Math.floor(s/3600)),
+              mm=pad(Math.floor((s%3600)/60)),
+              ss=pad(s%60);
         if($timer)$timer.textContent=`${hh}:${mm}:${ss}`
       }
-      render();setInterval(render,1000);
+      render(); setInterval(render,1000);
     })();
   </script>
 </body>
