--- a/index.html
+++ b/index.html
@@ -108,12 +108,12 @@
       </div>
 
       <div class="hero-photo">
-        <img src="thumb1.jpg" alt="Виталий Пузырёв указывает на ключевые пункты">
+        <img src="thumb1.png" alt="Виталий Пузырёв указывает на ключевые пункты">
       </div>
     </section>
 
     <section class="trust" aria-label="Блок доверия">
-      <div class="avatar"><img src="thumb1.jpg" alt="Виталий Пузырёв"></div>
+      <div class="avatar"><img src="thumb1.png" alt="Виталий Пузырёв"></div>
       <div class="who">Автор — <strong>Виталий Пузырёв</strong><small>таргетолог и инструктор по GPT</small></div>
       <div class="pay" aria-label="Способы оплаты">
         💳 Оплата:
