--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     </section>
 
     <section class="trust" aria-label="Блок доверия">
-      <div class="avatar"><img src="thumb1.jpg" alt="Виталий Пузырёв"></div>
+      <div class="avatar"><img src="vp_face.png" alt="Виталий Пузырёв"></div>
       <div class="who">Автор — <strong>Виталий Пузырёв</strong><small>таргетолог и инструктор по GPT</small></div>
       <div class="pay" aria-label="Способы оплаты">
         <span class="label">💳 Оплата:</span>
