--- a/index.html
+++ b/index.html
@@ -122,16 +122,16 @@
     </section>
 
     <section class="trust" aria-label="Блок доверия">
-      <div class="avatar"><img src="vp_face.png" alt="Виталий Пузырёв"></div>
+      <div class="avatar"><img src="thumb1.jpg" alt="Виталий Пузырёв"></div>
       <div class="who">Автор — <strong>Виталий Пузырёв</strong><small>таргетолог и инструктор по GPT</small></div>
       <div class="pay" aria-label="Способы оплаты">
         <span class="label">💳 Оплата:</span>
         <span class="icons">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/0/04/Visa.svg" alt="Visa">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/0/0e/Mastercard-logo.png" alt="Mastercard">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/3/30/American_Express_logo.svg" alt="American Express">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/f/fa/Apple_logo_black.svg" alt="Apple Pay">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg" alt="Google Pay">
+          <img src="visa-svgrepo-com.svg" alt="Visa">
+          <img src="master-card-svgrepo-com.svg" alt="Mastercard">
+          <img src="american-express-svgrepo-com.svg" alt="American Express">
+          <img src="Apple_Pay_logo.svg" alt="Apple Pay">
+          <img src="Google_Pay_Logo.svg" alt="Google Pay">
         </span>
       </div>
     </section>
