--- a/index.html
+++ b/index.html
@@ -38,32 +38,19 @@
     *{box-sizing:border-box}
     body{margin:0;background:var(--bg);color:var(--txt);
          font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif}
-    .container{max-width:820px;margin:36px auto;background:var(--card);
+    .container{max-width:720px;margin:24px auto;background:var(--card);
       border-radius:16px;box-shadow:0 8px 24px rgba(0,0,0,.08);
-      padding:24px 20px 28px}
-    h1{margin:0 0 .5em;font-size:1.9rem;line-height:1.2}
-    .subtitle{color:#555;font-size:1.05rem;margin:.2em 0 1.1em}
+      padding:20px}
+    h1{margin:0 0 .5em;font-size:1.8rem;line-height:1.2}
+    .subtitle{color:#555;font-size:1.05rem;margin:.2em 0 1em}
 
-    .hero{display:flex;gap:24px;align-items:center;flex-wrap:wrap}
-    .hero-text{flex:1 1 360px}
-    .hero-photo{flex:1 1 320px}
-    /* КРОП ФОТО на мобиле, чтобы убрать «белую пустоту» снизу картинки */
-    .hero-photo .crop{border-radius:12px;overflow:hidden;}
-    .hero-photo .crop img{width:100%;height:auto;display:block}
-    @media (max-width:560px){
-      .hero{flex-direction:column}
-      /* фиксированный видимый кадр: обрезаем лишнее дно у исходного изображения */
-      .hero-photo .crop{aspect-ratio:16/9}
-      .hero-photo .crop img{width:100%;height:100%;object-fit:cover;object-position:center}
-    }
-
-    ul{margin:.3em 0 0 0;padding-left:1.2em}
+    ul{margin:.3em 0 0 1.2em;padding:0}
     li{margin:.35em 0}
 
     .bonus{border:1px solid var(--bd);border-radius:12px;padding:14px;margin-top:14px;background:#fff}
     .bonus-title{font-weight:800;margin-bottom:.35em}
 
-    .cta{text-align:left;margin-top:16px}
+    .cta{margin-top:16px;text-align:center}
     .cta .btn{background:var(--cta);color:#fff;text-decoration:none;
       display:inline-block;padding:14px 22px;border-radius:10px;font-size:1.05rem;
       box-shadow:0 6px 14px rgba(255,102,0,.25);min-height:var(--tap);
@@ -72,8 +59,11 @@
     .cta .btn:active{transform:translateY(1px)}
     .cta small{display:block;color:var(--muted);margin-top:8px}
 
+    .hero-photo{margin-top:16px;text-align:center}
+    .hero-photo img{max-width:100%;border-radius:12px;display:block;margin:0 auto}
+
     .trust{margin-top:18px;display:flex;align-items:center;gap:12px;
-      border:1px solid var(--bd);border-radius:12px;padding:10px 12px;background:#fff;flex-wrap:wrap}
+      border:1px solid var(--bd);border-radius:12px;padding:10px;background:#fff;flex-wrap:wrap}
     .trust .avatar img{width:40px;height:40px;border-radius:50%;display:block}
     .trust .who{font-size:.95rem;line-height:1.2}
     .trust .who small{display:block;color:var(--muted)}
@@ -81,13 +71,6 @@
     .trust .pay .label{flex:0 0 100%}
     .trust .pay .icons{display:flex;gap:10px;flex-wrap:wrap}
     .trust .pay img{height:18px;max-width:60px}
-
-    @media (max-width:560px){
-      .container{margin:14px auto;padding:18px 14px 22px}
-      h1{font-size:1.55rem}
-      .cta{text-align:center}
-      .trust .pay img{height:16px}
-    }
   </style>
 </head>
 <body>
@@ -95,35 +78,29 @@
     <h1>ИИ за один вечер</h1>
     <div class="subtitle">Научитесь использовать GPT без технарщины и начните применять ИИ в своём бизнесе уже завтра.</div>
 
-    <section class="hero" aria-label="Первый экран">
-      <div class="hero-text">
-        <ul>
-          <li>⚙️ 5 реальных сценариев применения GPT</li>
-          <li>📄 Готовые промпты для ускорения работы</li>
-          <li>🧠 Метод внедрения GPT без технарщины</li>
-        </ul>
+    <ul>
+      <li>⚙️ 5 реальных сценариев применения GPT</li>
+      <li>📄 Готовые промпты для ускорения работы</li>
+      <li>🧠 Метод внедрения GPT без технарщины</li>
+    </ul>
 
-        <div class="bonus">
-          <div class="bonus-title">🎁 <strong>Бонусы</strong>:</div>
-          <ul>
-            <li>🧭 Ассистент «Обогатитель» для старта микробизнеса</li>
-            <li>📥 PDF «5 воронок в законе»</li>
-          </ul>
-        </div>
+    <div class="bonus">
+      <div class="bonus-title">🎁 <strong>Бонусы</strong>:</div>
+      <ul>
+        <li>🧭 Ассистент «Обогатитель» для старта микробизнеса</li>
+        <li>📥 PDF «5 воронок в законе»</li>
+      </ul>
+    </div>
 
-        <div class="cta">
-          <a class="btn js-cta" href="https://buy.stripe.com/14A3cubyk3H17C67Of6Na07"
-             aria-label="Получить доступ за 8,90 евро">Получить доступ за 8,90&nbsp;€</a>
-          <small>Если не зайдёт — вернём деньги в течение 24 часов.</small>
-        </div>
-      </div>
+    <div class="cta">
+      <a class="btn js-cta" href="https://buy.stripe.com/14A3cubyk3H17C67Of6Na07"
+         aria-label="Получить доступ за 8,90 евро">Получить доступ за 8,90&nbsp;€</a>
+      <small>Если не зайдёт — вернём деньги в течение 24 часов.</small>
+    </div>
 
-      <div class="hero-photo">
-        <div class="crop">
-          <img src="thumb1.jpg" alt="Виталий Пузырёв указывает на ключевые пункты">
-        </div>
-      </div>
-    </section>
+    <div class="hero-photo">
+      <img src="thumb1.jpg" alt="Виталий Пузырёв указывает на ключевые пункты">
+    </div>
 
     <section class="trust" aria-label="Блок доверия">
       <div class="avatar"><img src="thumb1.jpg" alt="Виталий Пузырёв"></div>
